[package]
name = "ground-station"
version = "0.0.0"
edition = "2021"

[dependencies]
iced_native = "0.4"
async-std = "1.10"
plotters = "0.3"
plotters-backend = "0.3"
plotters-iced = "0.1"
tracing = "0.1"
tracing-subscriber = "0.3"
paste = "1.0"

[dependencies.iced]
version = "0.3"
default-features = false
features = ["async-std", "glow_canvas", "glow", "debug"]

[dependencies.time]
version = "0.3"
features = ["formatting", "macros", "local-offset"]
