[package]
name = "interlink"
version = "0.1.0"
edition = "2021"

[dependencies]
defmt = { version = "0.3.0", optional = true }
heapless = { version = "0.7.8", features = ["serde"] }
serde = { version = "1.0.130", features = ["derive"], default-features = false }

[features]
default = []
defmt-impl = ["defmt", "heapless/defmt-impl"]
