[package]
name = "interlink"
version = "0.1.0"
edition = "2021"

[dependencies]
defmt = { version = "0.3.0", optional = true }
heapless = { version = "0.7.8", features = ["serde"] }
serde = { version = "1.0.130", features = ["derive"], default-features = false }
derive_more = "0.99.17"

[features]
default = []
vehicle = ["defmt", "heapless/defmt-impl"]
